# jule-connect

./: .gitignore  LICENSE  README.md  components.json  index.html  package.json  popup.html  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: release.yml
docs/: electron.md  gen-icons.md  gitflow-release.md  requirements-adopted.md  tauri.md  tech-implementation.md  tray-pupop.md  ui-fn.md
scripts/: gen-icons.mjs  release.mjs
src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  main.rs  store.rs  tray.rs
src-tauri/src/api/: commands.rs
src-tauri/src/port/: killer.rs  mod.rs  scanner.rs
src-tauri/src/tunnel/: cloudflare.rs  manager.rs  mod.rs  provider.rs
src/components/: app-sidebar.tsx
src/components/ui/: badge.tsx  card.tsx  dropdown-menu.tsx  resizable.tsx  sidebar.tsx  table.tsx  toaster.tsx
src/features/layout/: header.tsx
src/features/ports/: format.ts  port-detail-pane.tsx  ports-selectors.ts  ports-table.tsx  process-type.ts
src/features/tunnels/: tunnels-pane.tsx
src/lib/: toast.ts
src/popup/: main.tsx  popup-app.tsx
src/store/: app-store.ts
