[package]
name = "jule-connect"
version = "1.0.6"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
regex = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }




